--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -16,7 +16,7 @@
     </head>
     <header>
         <div class="content-wrapper flex wrap jc-between align-cent">
-            <img src="img/logo.png" width="200" height="92" alt="">
+            <img class="logo-top" src="img/logo.png" width="200" height="92" alt="">
             <div class="phone flex align-cent">
                 <img src="img/phone.png" width="37" height="37" alt="">
                 <a href="tel:89130000000"> 8 913 <span>000 00 00</span></a>
@@ -25,7 +25,6 @@
                 <img src="img/phone-w.png" width="37" height="37" alt="">
                 <a href="tel:83830000000"> 8 383 <span>000 00 00<span></a>
             </div>
-       
         <button class="header-button popup-on">Задать вопрос</button>
         <div id="menu-open" class="flex burger jc-center align-cent">
             <div class="burger-item"></div>
@@ -37,8 +36,8 @@
     <div class="top-text">
         <p>Скидка 50% <br>всем новым клиентам<br><span>на первую уборку*</span></p>
     </div>
-    <div class="bottom-text flex">
-        <p>Порадуйте себя и своих близких! Звоните</p><button class="top-bottom popup-on">Заказать оборатный звонок</button>
+    <div class="bottom-text flex jc-between wrap">
+        <p>Порадуйте себя и своих близких! Звоните</p><button class="top-bottom popup-on">Заказать обратный звонок</button>
     </div>
 </div>
     </header>
@@ -50,14 +49,14 @@
         </div>
         <div class="content-wrapper flex">
             <div class="work-item">
-                <img src="/img/icon1.png" alt="">
+                <img src="../img/icon1.png" alt="">
                 <p>Прозрачное ценообразование!</p>
                 <span>Почасовая оплата от 550 рублей (минимальное время - 2 часа). Вы платите за реальную работу в четко
                     обозначенное время.Никаких скрытых платежей и плавающих цен за разовые процедуры. </span>
             </div>
             <div class="work-skew bg-work-1">
                 <div class="work-item work-normal">
-                    <img src="/img/icon2.png" alt="">
+                    <img src="../img/icon2.png" alt="">
                     <p>Выбираете вы!</p>
                     <span>Вы сами решаете, что нужно чистить: окна, мебель и санузел или только бытовую технику. Навести
                         порядок в одной комнате или заплатить за комплексную уборку всего дома. Только вы определяете,
@@ -66,14 +65,14 @@
             </div>
             <div class="work-skew bg-work-2">
                 <div class="work-item work-normal ">
-                    <img src="/img/icon3.png" alt="">
+                    <img src="../img/icon3.png" alt="">
                     <p>Двойной контроль</p>
                     <span>Вы контролируете свои расходы, мы - работу бригады. Гарантия качества уборки и отсутствия
                         переплат – контроль и учет! </span>
                 </div>
             </div>
             <div class="work-item">
-                <img src="/img/icon4.png" alt="">
+                <img src="../img/icon4.png" alt="">
                 <p>Поможем всем</p>
                 <span>Работаем с самыми разными объектами. Офисы, квартиры, коттеджи. Повседневная и генеральная уборка.
                     Клининговые услуги в помещениях после ремонта. </span>
@@ -177,7 +176,7 @@
         <div class="section-header bg-color-orange">
             <h3 class="content-wrapper">Скидки</h3>
         </div>
-        <div class="content-wrapper flex">
+        <div class="content-wrapper flex gift">
             <div class="discounts-item">
                 <p>5% <span>скидка</span></p>
                 <div class="status silver">Серебрянный статус</div>
@@ -194,8 +193,8 @@
                 </div>
             </div>
             <div class="discounts-item">
-                <p>20% <span>скидка</span></p>
-                <p class="discounts-info">На день рождения</p>
+                <p class="red">20% <span class="black">скидка</span></p>
+                <div class="status">На День Рождения!***</div>
             </div>
         </div>
     </section>
