--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -217,6 +217,20 @@
                 <img src="../img/hand.png" alt="">
             </div>
         </div>
+        <div class="flex jc-between feedback-wrapper">
+            <div class="feedback-text">
+                <p class="feedback-name">Иван Иванов</p>
+                <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
+                <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p>
+            </div>
+            <img class="cleaning-girl" src="../img/cleaning-girl.png" alt="">
+            <div class="video-feedback flex">
+                <p>Видеоотзыв</p>
+                <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <img src="../img/hand.png" alt="">
+            </div>
+        </div>
         </div>
     </section>
     <section class="forms">
@@ -272,7 +286,7 @@
 </div>
 <div class="content-wrapper">
 <div class="aside-menu">
-        <div id="menu-close" class="flex burger jc-center align-cent">
+        <div id="menu-close" class="flex burger burger-active jc-center align-cent">
                 <div class="burger-item"></div>
                 <div class="burger-item"></div>
                 <div class="burger-item"></div>
