--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -276,6 +276,7 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
 <div class="overlay"></div>
+<div class="flex jc-center">
 <div class="popup">
     <div class="close">X</div>
    <p><span>ОСТАВЬТЕ&nbsp;</span>СВОЮ ЗАЯВКУ</p>
@@ -283,6 +284,7 @@
    <input class="input-popup" type="text" placeholder="Ваше Имя">
    <input class="input-popup" type="phone" placeholder="Ваш телефон">
    <button class="popup-button">Заказать</button>
+</div>
 </div>
 <div class="content-wrapper">
 <div class="aside-menu">
