--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -49,14 +49,14 @@
         </div>
         <div class="content-wrapper flex">
             <div class="work-item">
-                <img src="../img/icon1.png" alt="">
+                <img src="img/icon1.png" alt="">
                 <p>Прозрачное ценообразование!</p>
                 <span>Почасовая оплата от 550 рублей (минимальное время - 2 часа). Вы платите за реальную работу в четко
                     обозначенное время.Никаких скрытых платежей и плавающих цен за разовые процедуры. </span>
             </div>
             <div class="work-skew bg-work-1">
                 <div class="work-item work-normal">
-                    <img src="../img/icon2.png" alt="">
+                    <img src="img/icon2.png" alt="">
                     <p>Выбираете вы!</p>
                     <span>Вы сами решаете, что нужно чистить: окна, мебель и санузел или только бытовую технику. Навести
                         порядок в одной комнате или заплатить за комплексную уборку всего дома. Только вы определяете,
@@ -65,14 +65,14 @@
             </div>
             <div class="work-skew bg-work-2">
                 <div class="work-item work-normal ">
-                    <img src="../img/icon3.png" alt="">
+                    <img src="img/icon3.png" alt="">
                     <p>Двойной контроль</p>
                     <span>Вы контролируете свои расходы, мы - работу бригады. Гарантия качества уборки и отсутствия
                         переплат – контроль и учет! </span>
                 </div>
             </div>
             <div class="work-item">
-                <img src="../img/icon4.png" alt="">
+                <img src="img/icon4.png" alt="">
                 <p>Поможем всем</p>
                 <span>Работаем с самыми разными объектами. Офисы, квартиры, коттеджи. Повседневная и генеральная уборка.
                     Клининговые услуги в помещениях после ремонта. </span>
@@ -210,11 +210,11 @@
                 <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p>
             </div>
-            <img class="cleaning-girl" src="../img/cleaning-girl.png" alt="">
+            <img class="cleaning-girl" src="img/cleaning-girl.png" alt="">
             <div class="video-feedback flex">
                 <p>Видеоотзыв</p>
                 <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <img src="../img/hand.png" alt="">
+                <img src="img/hand.png" alt="">
             </div>
         </div>
         <div class="flex jc-between feedback-wrapper">
@@ -224,11 +224,11 @@
                 <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p>
             </div>
-            <img class="cleaning-girl" src="../img/cleaning-girl.png" alt="">
+            <img class="cleaning-girl" src="img/cleaning-girl.png" alt="">
             <div class="video-feedback flex">
                 <p>Видеоотзыв</p>
                 <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <img src="../img/hand.png" alt="">
+                <img src="img/hand.png" alt="">
             </div>
         </div>
         </div>
