--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#19b203" />
     <meta name="msapplication-navbutton-color" content="#19b203" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#19b203" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <title>Чисто 5</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
