--- a/shapki/index.html
+++ b/shapki/index.html
@@ -707,7 +707,7 @@
             <a href="#">Инга Шляпный дом</a>
             <a href="#">Моя шляпка</a>
             <a href="#">Оборудование</a>
-            <a href="#">Поляярик</a>
+            <a href="#">Полярик</a>
             <a href="#">ПриКиндер</a>
             <a href="#">Сиринга</a>
             <a href="#">Теплыши</a>
