--- a/shapki/index.html
+++ b/shapki/index.html
@@ -396,7 +396,8 @@
                     <div class="seasons-button pink">Лето</div>
                     <div class="seasons-button blue">Зима</div>
                 </div>
-                <div class="purple flex jc-between wrap seasons-content active">
+                <div class="seasons-content active">
+                    <div class="purple flex jc-between wrap">
                     <div class="season-item">
                         <a href="#">
                             <div class="seasons-block">
@@ -446,7 +447,10 @@
                         </a>
                     </div>
                 </div>
-                <div class="pink seasons-content flex jc-between wrap">
+                    <div class="season-img-wrapper"><img src="img/catalog1.png" alt=""></div>
+                </div>
+                <div class="seasons-content">
+                    <div class="pink flex jc-between wrap">
                     <div class="season-item">
                         <a href="#">
                             <div class="seasons-block">
@@ -496,7 +500,10 @@
                         </a>
                     </div>
                 </div>
-                <div class="blue seasons-content flex jc-between wrap">
+                <div class="season-img-wrapper"><img src="img/catalog2.png" alt=""></div>
+                </div>
+                <div class="seasons-content">
+                    <div class="blue flex jc-between wrap">
                     <div class="season-item">
                         <a href="#">
                             <div class="seasons-block">
@@ -545,6 +552,8 @@
                             </div>
                         </a>
                     </div>
+                </div>
+                <div class="season-img-wrapper"><img src="img/catalog3.png" alt=""></div>
                 </div>
             </section>
             <section class="sale">Распродажа <span>-70%</span></section>
