--- a/shapki/index.html
+++ b/shapki/index.html
@@ -110,6 +110,7 @@
     <div class="content-wrapper factory">
         <ul class="flex jc-between align-cent">
             <button class="proizv-button">Производители</button>
+            <div class="owl-carousel owl-theme slide-three">
             <div class="letter">
                 <li>A
                     <div class="info-container">
@@ -303,6 +304,7 @@
                     </div>
                 </li>
             </div>
+        </div>
         </ul>
     </div>
     <div class="owl-carousel owl-theme slide-one">
@@ -589,6 +591,7 @@
                                 По 10 тысяч моделей добавляется к
                                 каждому новому сезону. Регулярное обновление. </p>
                         </div>
+                        <div><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-2.png" width="85" height="85" alt="">
