--- a/shapki/index.html
+++ b/shapki/index.html
@@ -591,7 +591,7 @@
                                 По 10 тысяч моделей добавляется к
                                 каждому новому сезону. Регулярное обновление. </p>
                         </div>
-                        <div><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-2.png" width="85" height="85" alt="">
@@ -602,6 +602,7 @@
                                 ведущих мировых и российских производителей.
                             </p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-3.png" width="85" height="85" alt="">
@@ -610,6 +611,7 @@
                             <p class="about-text">Новосибирск – современный город с развитой транспортной системой.
                                 Добраться до нас не составит никакого труда. </p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-4.png" width="85" height="85" alt="">
@@ -618,6 +620,7 @@
                             <p class="about-text">Коллекции для покупателей с самыми разными запросами и бюджетными
                                 возможностями</p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-5.png" width="85" height="85" alt="">
@@ -627,6 +630,7 @@
                                 поиск
                                 товаров. Экономьте время и деньги, заказывая через сайт! </p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-6.png" width="85" height="85" alt="">
@@ -635,6 +639,7 @@
                             <p class="about-text">Полная информация о всех новинках, скидках, акциях. Покупка товаров
                                 «наборами» по специальным ценам. </p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-7.png" width="85" height="85" alt="">
@@ -642,6 +647,7 @@
                             <p class="about-header">Эксклюзивные коллекции</p>
                             <p class="about-text">Некоторые коллекции в России вы найдете только у нас! </p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-8.png" width="85" height="85" alt="">
@@ -651,6 +657,7 @@
                                 сайте.
                             </p>
                         </div>
+                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                 </div>
                 <p class="about-info">Но, самое главное для нас — это вы, наши покупатели, которые приходят именно к нам
