header and main adaptive

--- a/shapki/index.html
+++ b/shapki/index.html
@@ -334,6 +334,7 @@
             <div class="toggle-button yellow-button">Хиты</div>
             <div class="toggle-button red-button">Акции</div>
         </div>
+        <div class="mobile-button green-button"><p>Акции</p></div>
         <div class="gallery-container container-green tabs_content active">
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
@@ -355,6 +356,7 @@
             </div>
             <button class="show-all show-all_green">Смотреть все</button>
         </div>
+        <div class="mobile-button yellow-button"><p>Хиты</p></div>
         <div class="gallery-container container-yellow tabs_content">
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
@@ -376,6 +378,7 @@
             </div>
             <button class="show-all show-all_yellow">Смотреть все</button>
         </div>
+        <div class="mobile-button red-button"><p>Новинки</p></div>
         <div class="gallery-container container-red tabs_content">
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
