--- a/shapki/index.html
+++ b/shapki/index.html
@@ -409,12 +409,13 @@
                     <div class="seasons-button pink">Лето</div>
                     <div class="seasons-button blue">Зима</div>
                 </div>
+                <div class="mobile-button purple"><p>Весна / осень</p></div>
                 <div class="seasons-content active">
                     <div class="purple flex jc-between wrap">
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Головные уборы для взрослых</div>
+                                    <div class="square">Головные уборы для взрослых</div>
                                     <img src="img/1.png" alt="">
                                 </div>
                             </a>
@@ -422,7 +423,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Головные уборы для детей</div>
+                                    <div class="square">Головные уборы для детей</div>
                                     <img src="img/2.png" alt="">
                                 </div>
                             </a>
@@ -430,7 +431,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
+                                    <div class="square">Шарфы и снуды для взрослых</div>
                                     <img src="img/3.png" alt="">
                                 </div>
                             </a>
@@ -438,7 +439,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Детские шарфы и снуды</div>
+                                    <div class="square">Детские шарфы и снуды</div>
                                     <img src="img/4.png" alt="">
                                 </div>
                             </a>
@@ -446,7 +447,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Комплекты для взрослых</div>
+                                    <div class="square">Комплекты для взрослых</div>
                                     <img src="img/5.png" alt="">
                                 </div>
                             </a>
@@ -454,7 +455,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Детская одежда</div>
+                                    <div class="square">Детская одежда</div>
                                     <img src="img/6.png" alt="">
                                 </div>
                             </a>
@@ -465,12 +466,13 @@
                         <img src="img/catalog1.png" alt="">
                     </div>
                 </div>
+                <div class="mobile-button pink"><p>Лето</p></div>
                 <div class="seasons-content">
                     <div class="pink flex jc-between wrap">
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Головные уборы для взрослых1</div>
+                                    <div class="square">Головные уборы для взрослых1</div>
                                     <img src="img/1.png" alt="">
                                 </div>
                             </a>
@@ -478,7 +480,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Головные уборы для детей</div>
+                                    <div class="square">Головные уборы для детей</div>
                                     <img src="img/2.png" alt="">
                                 </div>
                             </a>
@@ -486,7 +488,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
+                                    <div class="square">Шарфы и снуды для взрослых</div>
                                     <img src="img/3.png" alt="">
                                 </div>
                             </a>
@@ -494,7 +496,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Детские шарфы и снуды</div>
+                                    <div class="square">Детские шарфы и снуды</div>
                                     <img src="img/4.png" alt="">
                                 </div>
                             </a>
@@ -502,7 +504,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Комплекты для взрослых</div>
+                                    <div class="square">Комплекты для взрослых</div>
                                     <img src="img/5.png" alt="">
                                 </div>
                             </a>
@@ -510,7 +512,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Детская одежда</div>
+                                    <div class="square">Детская одежда</div>
                                     <img src="img/6.png" alt="">
                                 </div>
                             </a>
@@ -521,12 +523,13 @@
                         <img src="img/catalog2.png" alt="">
                     </div>
                 </div>
+                <div class="mobile-button blue"><p>Зима</p></div>
                 <div class="seasons-content">
                     <div class="blue flex jc-between wrap">
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Головные уборы для взрослых2</div>
+                                    <div class="square">Головные уборы для взрослых2</div>
                                     <img src="img/1.png" alt="">
                                 </div>
                             </a>
@@ -534,7 +537,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Головные уборы для детей</div>
+                                    <div class="square">Головные уборы для детей</div>
                                     <img src="img/2.png" alt="">
                                 </div>
                             </a>
@@ -542,7 +545,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Шарфы и снуды для взрослых</div>
+                                    <div class="square">Шарфы и снуды для взрослых</div>
                                     <img src="img/3.png" alt="">
                                 </div>
                             </a>
@@ -550,7 +553,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Детские шарфы и снуды</div>
+                                    <div class="square">Детские шарфы и снуды</div>
                                     <img src="img/4.png" alt="">
                                 </div>
                             </a>
@@ -558,7 +561,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Комплекты для взрослых</div>
+                                    <div class="square">Комплекты для взрослых</div>
                                     <img src="img/5.png" alt="">
                                 </div>
                             </a>
@@ -566,7 +569,7 @@
                         <div class="season-item">
                             <a href="#">
                                 <div class="seasons-block">
-                                    <div class="square flex align-cent">Детская одежда</div>
+                                    <div class="square">Детская одежда</div>
                                     <img src="img/6.png" alt="">
                                 </div>
                             </a>
