--- a/shapki/index.html
+++ b/shapki/index.html
@@ -790,15 +790,19 @@
         </div>
         <div class="footer-item">
             <p>Личный кабинет</p>
+            <div>
             <a href="#">Личный кабинет</a>
             <a href="#">Заметки</a>
             <a href="#">Подписка</a>
+            </div>
         </div>
         <div class="footer-item">
             <p>Контакты</p>
+            <div>
             <span>8 800 000 00 00<br>
                 Пн-пт: 9:00 - 18:00<br>
                 г. Новосибирск, ул. Воинская 63/3</span>
+            </div>
         </div>
     </div>
 </footer>
