--- a/shapki/index.html
+++ b/shapki/index.html
@@ -9,10 +9,10 @@
     <meta name="msapplication-navbutton-color" content="#752a7e" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#752a7e" />
     <title>Шапки</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <header>
     <div class="header-top content-wrapper flex">
@@ -94,7 +94,7 @@
                 </div>
                 <li class="first-menu-item"><a href="#">Каталог</a></li>
             </div>
-            <div class="flex align-cent jc-between" style="width: 55%">
+            <div class="menu flex align-cent jc-between">
                 <li><a href="#">Женщинам</a></li>
                 <li><a href="#">Мужчинам</a></li>
                 <li><a href="#">Детям</a></li>
@@ -353,6 +353,22 @@
                     <img src="img/2-4.png" width="290" height="235" alt="">
                     <p class="green">Петрона (52-54) Косынка</p>
                 </div>
+                <div class="gallery-item">
+                    <img src="img/2-1.png" width="290" height="235" alt="">
+                    <p class="green">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-2.png" width="290" height="235" alt="">
+                    <p class="green">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-3.png" width="290" height="235" alt="">
+                    <p class="green">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-4.png" width="290" height="235" alt="">
+                    <p class="green">Петрона (52-54) Косынка</p>
+                </div>
             </div>
             <button class="show-all show-all_green">Смотреть все</button>
         </div>
@@ -375,12 +391,44 @@
                     <img src="img/2-4.png" width="290" height="235" alt="">
                     <p class="yellow">Петрона (52-54) Косынка</p>
                 </div>
+                <div class="gallery-item">
+                    <img src="img/2-1.png" width="290" height="235" alt="">
+                    <p class="yellow">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-2.png" width="290" height="235" alt="">
+                    <p class="yellow">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-3.png" width="290" height="235" alt="">
+                    <p class="yellow">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-4.png" width="290" height="235" alt="">
+                    <p class="yellow">Петрона (52-54) Косынка</p>
+                </div>
             </div>
             <button class="show-all show-all_yellow">Смотреть все</button>
         </div>
         <div class="mobile-button red-button"><p>Новинки</p></div>
         <div class="gallery-container container-red tabs_content">
             <div class="content-wrapper slide-two owl-carousel owl-theme">
+                <div class="gallery-item">
+                    <img src="img/2-1.png" width="290" height="235" alt="">
+                    <p class="red">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-2.png" width="290" height="235" alt="">
+                    <p class="red">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-3.png" width="290" height="235" alt="">
+                    <p class="red">Петрона (52-54) Косынка</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="img/2-4.png" width="290" height="235" alt="">
+                    <p class="red">Петрона (52-54) Косынка</p>
+                </div>
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
                     <p class="red">Петрона (52-54) Косынка</p>
