--- a/shapki/index.html
+++ b/shapki/index.html
@@ -16,6 +16,11 @@
 </head>
 <header>
     <div class="header-top content-wrapper flex">
+        <div class="menubutton menubutton_header">
+            <div class="menuitem"></div>
+            <div class="menuitem"></div>
+            <div class="menuitem"></div>
+        </div>
         <ul class="flex">
             <li><a href="#">О Компании</a></li>
             <li><a href="#">Доставка</a></li>
@@ -52,26 +57,6 @@
                         height="5mm" version="1.1"
                         style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
                         viewBox="0 0 20000 20000" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <defs>
-                            <style type="text/css">
-                                .str1 {
-                                    stroke: #ffffff;
-                                    stroke-width: 1000;
-                                    stroke-miterlimit: 22.9256
-                                }
-
-                                .str0 {
-                                    stroke: #ffffff;
-                                    stroke-width: 1000;
-                                    stroke-linecap: round;
-                                    stroke-miterlimit: 22.9256
-                                }
-
-                                .fil0 {
-                                    fill: none
-                                }
-                            </style>
-                        </defs>
                         <g id="Слой_x0020_1">
                             <metadata id="CorelCorpID_0Corel-Layer" />
                             <path class="fil0 str0"
@@ -87,7 +72,7 @@
     <ul class="main-nav flex borders jc-between align-cent">
         <div class="start flex align-cent">
             <div class="flex align-cent first">
-                <div class="menubutton">
+                <div class="menubutton menubutton_main">
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
                     <div class="menuitem"></div>
