--- a/shapki/index.html
+++ b/shapki/index.html
@@ -319,8 +319,10 @@
             <div class="toggle-button yellow-button">Хиты</div>
             <div class="toggle-button red-button">Акции</div>
         </div>
-        <div class="mobile-button green-button"><p>Акции</p></div>
         <div class="gallery-container container-green tabs_content active">
+            <div class="mobile-button green-button"><p>Акции</p>
+                <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
+            </div>
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
@@ -357,8 +359,10 @@
             </div>
             <button class="show-all show-all_green">Смотреть все</button>
         </div>
-        <div class="mobile-button yellow-button"><p>Хиты</p></div>
         <div class="gallery-container container-yellow tabs_content">
+            <div class="mobile-button yellow-button"><p>Хиты</p>
+                <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
+            </div>
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
@@ -395,8 +399,10 @@
             </div>
             <button class="show-all show-all_yellow">Смотреть все</button>
         </div>
-        <div class="mobile-button red-button"><p>Новинки</p></div>
         <div class="gallery-container container-red tabs_content">
+            <div class="mobile-button red-button"><p>Новинки</p>
+                <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
+            </div>
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
@@ -442,8 +448,10 @@
                     <div class="seasons-button pink">Лето</div>
                     <div class="seasons-button blue">Зима</div>
                 </div>
-                <div class="mobile-button purple"><p>Весна / осень</p></div>
                 <div class="seasons-content active">
+                     <div class="mobile-button purple"><p>Весна / осень</p>
+                    <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
+                    </div>
                     <div class="purple flex jc-between wrap">
                         <div class="season-item">
                             <a href="#">
@@ -493,14 +501,17 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="season-img-wrapper">
+                            <button class="show-all show-all_purple show-all_second-section">Весь каталог</button>
+                            <img src="img/catalog1.png" alt="">
+                        </div>
                     </div>
-                    <div class="season-img-wrapper">
-                        <button class="show-all show-all_purple show-all_second-section">Весь каталог</button>
-                        <img src="img/catalog1.png" alt="">
-                    </div>
+
                 </div>
-                <div class="mobile-button pink"><p>Лето</p></div>
                 <div class="seasons-content">
+                    <div class="mobile-button pink"><p>Лето</p>
+                        <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
+                    </div>
                     <div class="pink flex jc-between wrap">
                         <div class="season-item">
                             <a href="#">
@@ -550,14 +561,17 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
-                    <div class="season-img-wrapper">
+                        <div class="season-img-wrapper">
                         <button class="show-all show-all_pink show-all_second-section">Весь каталог</button>
                         <img src="img/catalog2.png" alt="">
                     </div>
+                    </div>
+
                 </div>
-                <div class="mobile-button blue"><p>Зима</p></div>
                 <div class="seasons-content">
+                    <div class="mobile-button blue"><p>Зима</p>
+                        <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
+                    </div>
                     <div class="blue flex jc-between wrap">
                         <div class="season-item">
                             <a href="#">
@@ -607,11 +621,12 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="season-img-wrapper">
+                            <button class="show-all show-all_blue show-all_second-section">Весь каталог</button>
+                            <img src="img/catalog3.png" alt="">
+                        </div>
                     </div>
-                    <div class="season-img-wrapper">
-                        <button class="show-all show-all_blue show-all_second-section">Весь каталог</button>
-                        <img src="img/catalog3.png" alt="">
-                    </div>
+
                 </div>
             </section>
             <section class="sale">Распродажа <span>-70%</span></section>
@@ -621,7 +636,7 @@
                     всей
                     России. Выбирая нас, вы
                     делаете выбор в пользу:</p>
-                <div class="flex wrap">
+                <div class="flex wrap jc-center">
                     <div class="about-item flex">
                         <img src="img/1-1.png" width="85" height="85" alt="">
                         <div>
@@ -629,8 +644,9 @@
                             <p class="about-text">15 тысяч моделей постоянно представлены в каталоге.
                                 По 10 тысяч моделей добавляется к
                                 каждому новому сезону. Регулярное обновление. </p>
+                                <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
+
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-2.png" width="85" height="85" alt="">
@@ -640,8 +656,8 @@
                                 Продукция
                                 ведущих мировых и российских производителей.
                             </p>
+                            <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-3.png" width="85" height="85" alt="">
@@ -649,8 +665,8 @@
                             <p class="about-header">Удобное расположение</p>
                             <p class="about-text">Новосибирск – современный город с развитой транспортной системой.
                                 Добраться до нас не составит никакого труда. </p>
+                                <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-4.png" width="85" height="85" alt="">
@@ -658,8 +674,8 @@
                             <p class="about-header">Широкий выбор</p>
                             <p class="about-text">Коллекции для покупателей с самыми разными запросами и бюджетными
                                 возможностями</p>
+                                <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-5.png" width="85" height="85" alt="">
@@ -668,8 +684,8 @@
                             <p class="about-text">Качественные фото, выбор расцветок, все модели с описаниями, быстрый
                                 поиск
                                 товаров. Экономьте время и деньги, заказывая через сайт! </p>
+                                 <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-6.png" width="85" height="85" alt="">
@@ -677,16 +693,16 @@
                             <p class="about-header">Клуб Покупателей</p>
                             <p class="about-text">Полная информация о всех новинках, скидках, акциях. Покупка товаров
                                 «наборами» по специальным ценам. </p>
+                                <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-7.png" width="85" height="85" alt="">
                         <div>
                             <p class="about-header">Эксклюзивные коллекции</p>
                             <p class="about-text">Некоторые коллекции в России вы найдете только у нас! </p>
+                            <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                     <div class="about-item flex">
                         <img src="img/1-8.png" width="85" height="85" alt="">
@@ -695,8 +711,8 @@
                             <p class="about-text">Тренды сезона, хиты продаж и полные комплекты аксессуаров на одном
                                 сайте.
                             </p>
+                            <img class="toggle-text"src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt="">
                         </div>
-                        <div class="toggle-text"><img src="img/keyboard-right-arrow-button1.png" width="25" height="15" alt=""></div>
                     </div>
                 </div>
                 <p class="about-info">Но, самое главное для нас — это вы, наши покупатели, которые приходят именно к нам
@@ -706,6 +722,11 @@
             </section>
         </div>
         <section class="aside">
+            <div class="menubutton menubutton_header">
+                <div class="menuitem"></div>
+                <div class="menuitem"></div>
+                <div class="menuitem"></div>
+            </div>
             <h3 class="header-about">Наши поставщики</h3>
             <a style="margin-top: 20px;" href="#">Artel</a>
             <a href="#">Avanta</a>
