--- a/shapki/index.html
+++ b/shapki/index.html
@@ -37,7 +37,7 @@
     <div class="header-middle flex content-wrapper">
         <img class="logo" src="img/logo-shap.png" width="107" height="115" alt="">
         <div>
-            <p class="phone">8 900 000 00 00</p>
+            <a class="phone" href="tel:89000000000"> 8 900 000 00 00 </a>
             <button class="button-header">Обратный звонок</button>
         </div>
         <div class="main-text">
@@ -109,119 +109,103 @@
             <div class="letter">
                 <li>B
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>C
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>D
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>E
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>F
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>G
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>H
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>I
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>G
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>K
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>L
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>M
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>N
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>O
                     <div class="info-container">
-                        content
+
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>P
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>R
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>S
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
@@ -229,63 +213,54 @@
                 <li>
                     <Thead></Thead>
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>V
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>W
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>О
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>М
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>И
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>П
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>С
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
             <div class="letter">
                 <li>Т
                     <div class="info-container">
-                        content
                     </div>
                 </li>
             </div>
@@ -323,6 +298,7 @@
             <div class="mobile-button green-button"><p>Акции</p>
                 <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
             </div>
+            <div>
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
@@ -359,10 +335,12 @@
             </div>
             <button class="show-all show-all_green">Смотреть все</button>
         </div>
+        </div>
         <div class="gallery-container container-yellow tabs_content">
             <div class="mobile-button yellow-button"><p>Хиты</p>
                 <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
             </div>
+            <div>
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
@@ -399,10 +377,12 @@
             </div>
             <button class="show-all show-all_yellow">Смотреть все</button>
         </div>
+        </div>
         <div class="gallery-container container-red tabs_content">
             <div class="mobile-button red-button"><p>Новинки</p>
                 <div class="arrow"><img src="img/keyboard-right-arrow-button1.png" alt=""></div>
             </div>
+            <div>
             <div class="content-wrapper slide-two owl-carousel owl-theme">
                 <div class="gallery-item">
                     <img src="img/2-1.png" width="290" height="235" alt="">
@@ -438,6 +418,7 @@
                 </div>
             </div>
             <button class="show-all show-all_red">Смотреть все</button>
+        </div>
         </div>
     </section>
     <div class="flex jc-center">
@@ -825,8 +806,8 @@
     </div>
     <div class="footer-content flex wrap content-wrapper">
         <div class="footer-item">
-            <p>Карта сайта</p>
-            <div class="flex wrap jc-between">
+            <p class="footer-header">Карта сайта</p>
+            <div class="flex wrap jc-between content-footer">
                 <div>
                     <a href="#">О компании</a>
                     <a href="#">Новости</a>
@@ -843,20 +824,20 @@
             </div>
         </div>
         <div class="footer-item">
-            <p>Личный кабинет</p>
-            <div>
+            <p class="footer-header">Личный кабинет</p>
+            <div class="content-footer">
             <a href="#">Личный кабинет</a>
             <a href="#">Заметки</a>
             <a href="#">Подписка</a>
             </div>
         </div>
         <div class="footer-item">
-            <p>Контакты</p>
-            <div>
+            <p class="footer-header">Контакты</p>
+            <div class="content-footer">
             <span>8 800 000 00 00<br>
                 Пн-пт: 9:00 - 18:00<br>
                 г. Новосибирск, ул. Воинская 63/3</span>
-            </div>
+            </div cl>
         </div>
     </div>
 </footer>
