--- a/shapki/index.html
+++ b/shapki/index.html
@@ -806,6 +806,7 @@
     </div>
     <div class="footer-content flex wrap content-wrapper">
         <div class="footer-item">
+            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
             <p class="footer-header">Карта сайта</p>
             <div class="flex wrap jc-between content-footer">
                 <div>
@@ -824,6 +825,7 @@
             </div>
         </div>
         <div class="footer-item">
+            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
             <p class="footer-header">Личный кабинет</p>
             <div class="content-footer">
             <a href="#">Личный кабинет</a>
@@ -832,6 +834,7 @@
             </div>
         </div>
         <div class="footer-item">
+            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
             <p class="footer-header">Контакты</p>
             <div class="content-footer">
             <span>8 800 000 00 00<br>
