--- a/shapki/index.html
+++ b/shapki/index.html
@@ -268,10 +268,10 @@
         </ul>
     </div>
     <div class="owl-carousel owl-theme slide-one">
-        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
-        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
-        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
-        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
+        <div class="slider-item"></div>
+        <div class="slider-item"></div>
+        <!-- <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
+        <div class="slider-item"><img src="img/main-banner.png" alt=""></div> -->
     </div>
 </header>
 
