--- a/shapki/index.html
+++ b/shapki/index.html
@@ -267,10 +267,13 @@
         </div>
         </ul>
     </div>
+    <div class="slider-wrapper">
     <div class="owl-carousel owl-theme slide-one">
         <div class="slider-item"></div>
         <div class="slider-item"></div>
     </div>
+    <button class="slider-button">Смотреть</button>
+</div>
 </header>
 
 <body>
