--- a/shapki/index.html
+++ b/shapki/index.html
@@ -807,7 +807,6 @@
     </div>
     <div class="footer-content flex wrap content-wrapper">
         <div class="footer-item">
-            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
             <p class="footer-header">Карта сайта</p>
             <div class="flex wrap jc-between content-footer">
                 <div>
@@ -824,24 +823,25 @@
                     <a href="#">Информативные статьи</a>
                 </div>
             </div>
+            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
         </div>
         <div class="footer-item">
-            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
             <p class="footer-header">Личный кабинет</p>
             <div class="content-footer">
             <a href="#">Личный кабинет</a>
             <a href="#">Заметки</a>
             <a href="#">Подписка</a>
             </div>
+            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
         </div>
         <div class="footer-item">
-            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
             <p class="footer-header">Контакты</p>
             <div class="content-footer">
             <span>8 800 000 00 00<br>
                 Пн-пт: 9:00 - 18:00<br>
                 г. Новосибирск, ул. Воинская 63/3</span>
-            </div cl>
+            </div>
+            <img class="footer-arrow" src="img/keyboard-right-arrow-button1.png" alt="">
         </div>
     </div>
 </footer>
